[gd_scene load_steps=19 format=3 uid="uid://bkaywuqjww1le"]

[ext_resource type="Script" path="res://Scripts/level_menu.gd" id="1_uaim2"]
[ext_resource type="Texture2D" uid="uid://by7rtcjcnso8f" path="res://aset aseprite/bg_kayu.png" id="1_w46a5"]
[ext_resource type="Texture2D" uid="uid://cmhgx5xby3bhy" path="res://aset aseprite/LevelMenu1.png" id="2_l26qi"]
[ext_resource type="Texture2D" uid="uid://bpoohwu5sc7m6" path="res://aset aseprite/LevelMenu.png" id="3_1da78"]
[ext_resource type="FontFile" uid="uid://c583mm1xbwni5" path="res://font/I-pixel-u.ttf" id="3_2w5t3"]
[ext_resource type="Texture2D" uid="uid://c5vicfwbr7rbp" path="res://aset aseprite/level_menu_locked.png" id="3_81ftp"]
[ext_resource type="Texture2D" uid="uid://ddsoqpmdq7ew4" path="res://aset aseprite/LevelMenu2.png" id="4_27l0c"]
[ext_resource type="FontFile" uid="uid://cnrpw086ndg2n" path="res://font/DePixelBreit.ttf" id="6_kiygy"]
[ext_resource type="Texture2D" uid="uid://cgryg6mutfhok" path="res://aset aseprite/SELECT.png" id="7_p1508"]
[ext_resource type="Texture2D" uid="uid://b0e0d5ckrmo4b" path="res://aset aseprite/SELECT1-export.png" id="8_61omh"]
[ext_resource type="FontFile" uid="uid://be1488wacuvuy" path="res://I-pixel-u.ttf" id="9_bk4ee"]
[ext_resource type="Texture2D" uid="uid://b8ldmbhsqvvhp" path="res://aset aseprite/foto2.png" id="11_to84r"]
[ext_resource type="Texture2D" uid="uid://mmm4n40d6pks" path="res://aset aseprite/foto3.png" id="12_imt0k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_au62c"]
content_margin_left = 131.0
content_margin_top = 13.0
texture = ExtResource("7_p1508")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8strt"]
texture = ExtResource("8_61omh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_68mqg"]
texture = ExtResource("7_p1508")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_quq8l"]
texture = ExtResource("7_p1508")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hepub"]
texture = ExtResource("7_p1508")

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uaim2")
level_menu_kronologi = Array[Texture2D]([ExtResource("4_27l0c"), ExtResource("3_81ftp")])

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_w46a5")

[node name="Level1" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="Koran" type="TextureRect" parent="Level1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = 6.0
offset_right = 1640.0
offset_bottom = 1034.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l26qi")

[node name="Label" type="Label" parent="Level1/Koran"]
layout_mode = 0
offset_left = 607.0
offset_top = 252.0
offset_right = 850.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(0.290196, 0.282353, 0.266667, 1)
theme_override_fonts/font = ExtResource("3_2w5t3")
theme_override_font_sizes/font_size = 36
text = "BAB SATOE:"

[node name="Label2" type="Label" parent="Level1/Koran"]
layout_mode = 0
offset_left = 472.0
offset_top = 292.0
offset_right = 994.0
offset_bottom = 337.0
theme_override_colors/font_color = Color(0.384314, 0.368627, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_2w5t3")
theme_override_font_sizes/font_size = 36
text = "INSIDEN HOTEL YAMATO"

[node name="Foto" type="TextureRect" parent="Level1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 296.0
offset_top = 22.0
offset_right = 1696.0
offset_bottom = 1050.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1da78")

[node name="Kronologi" type="TextureRect" parent="Level1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 241.0
offset_top = 18.0
offset_right = 1641.0
offset_bottom = 1046.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_27l0c")

[node name="Label" type="Label" parent="Level1/Kronologi"]
layout_mode = 0
offset_left = 782.0
offset_top = 450.0
offset_right = 1124.0
offset_bottom = 513.0
theme_override_colors/font_color = Color(0.290196, 0.282353, 0.266667, 1)
theme_override_fonts/font = ExtResource("3_2w5t3")
theme_override_font_sizes/font_size = 50
text = "KRONOLOGI"

[node name="Label2" type="Label" parent="Level1/Kronologi"]
layout_mode = 0
offset_left = 731.0
offset_top = 527.0
offset_right = 1184.0
offset_bottom = 729.0
theme_override_colors/font_color = Color(0.290196, 0.282353, 0.266667, 1)
theme_override_fonts/font = ExtResource("6_kiygy")
text = "Peristiwa Hotel Yamato terjadi pada 19 
September 1945 di Surabaya. Sekelompok pemuda Indonesia, dipimpin oleh Sidik, Koesno, dan Hariyono, merobek bagian biru dari bendera Belanda di Hotel Yamato dan mengibarkan bendera Merah Putih sebagai simbol kemerdekaan. Tindakan ini memicu ketegangan dengan pasukan Belanda dan menjadi salah satu pemicu Pertempuran Surabaya pada November 1945."
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="Button" type="Button" parent="Level1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 1020.0
offset_top = 880.0
offset_right = 1282.0
offset_bottom = 914.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_au62c")
theme_override_styles/hover = SubResource("StyleBoxTexture_8strt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_68mqg")

[node name="Level2" type="Control" parent="."]
anchors_preset = 0

[node name="Koran" type="TextureRect" parent="Level2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = 6.0
offset_right = 1640.0
offset_bottom = 1034.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l26qi")

[node name="Label" type="Label" parent="Level2/Koran"]
layout_mode = 0
offset_left = 607.0
offset_top = 252.0
offset_right = 850.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(0.290196, 0.282353, 0.266667, 1)
theme_override_fonts/font = ExtResource("3_2w5t3")
theme_override_font_sizes/font_size = 36
text = "BAB DUA:"

[node name="Label2" type="Label" parent="Level2/Koran"]
layout_mode = 0
offset_left = 310.0
offset_top = 292.0
offset_right = 1147.0
offset_bottom = 337.0
theme_override_colors/font_color = Color(0.384314, 0.368627, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_2w5t3")
theme_override_font_sizes/font_size = 36
text = "KEDATANGAN PASUKAN INGGRIS-INDIA"

[node name="Foto" type="TextureRect" parent="Level2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 296.0
offset_top = 22.0
offset_right = 1696.0
offset_bottom = 1050.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_to84r")

[node name="Kronologi" type="TextureRect" parent="Level2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 241.0
offset_top = 18.0
offset_right = 1641.0
offset_bottom = 1046.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_27l0c")

[node name="Label" type="Label" parent="Level2/Kronologi"]
layout_mode = 0
offset_left = 782.0
offset_top = 450.0
offset_right = 1124.0
offset_bottom = 513.0
theme_override_colors/font_color = Color(0.290196, 0.282353, 0.266667, 1)
theme_override_fonts/font = ExtResource("3_2w5t3")
theme_override_font_sizes/font_size = 50
text = "KRONOLOGI"

[node name="Label2" type="Label" parent="Level2/Kronologi"]
layout_mode = 0
offset_left = 731.0
offset_top = 527.0
offset_right = 1184.0
offset_bottom = 729.0
theme_override_colors/font_color = Color(0.290196, 0.282353, 0.266667, 1)
theme_override_fonts/font = ExtResource("6_kiygy")
text = "Pada bulan Oktober 1945, pasukan Inggris yang terdiri dari tentara India-Britania tiba di Surabaya. Mereka datang untuk melucuti senjata tentara Jepang yang sudah menyerah dan memulangkan tawanan perang Sekutu.
Pasukan ini juga bertugas mengembalikan kontrol kepada Belanda, yang memicu ketegangan dengan pejuang kemerdekaan Indonesia yang ingin mempertahankan kemerdekaan mereka."
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="Button" type="Button" parent="Level2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 1020.0
offset_top = 880.0
offset_right = 1282.0
offset_bottom = 914.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_au62c")
theme_override_styles/hover = SubResource("StyleBoxTexture_8strt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_quq8l")

[node name="Level3" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="Koran" type="TextureRect" parent="Level3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = 6.0
offset_right = 1640.0
offset_bottom = 1034.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l26qi")

[node name="Label" type="Label" parent="Level3/Koran"]
layout_mode = 0
offset_left = 607.0
offset_top = 252.0
offset_right = 850.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(0.290196, 0.282353, 0.266667, 1)
theme_override_fonts/font = ExtResource("3_2w5t3")
theme_override_font_sizes/font_size = 36
text = "BAB TIGA:"

[node name="Label2" type="Label" parent="Level3/Koran"]
layout_mode = 0
offset_left = 448.0
offset_top = 292.0
offset_right = 1042.0
offset_bottom = 337.0
theme_override_colors/font_color = Color(0.384314, 0.368627, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_2w5t3")
theme_override_font_sizes/font_size = 36
text = "PERTEMPURAN 10 NOVEMBER"

[node name="Foto" type="TextureRect" parent="Level3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 296.0
offset_top = 22.0
offset_right = 1696.0
offset_bottom = 1050.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_imt0k")

[node name="Kronologi" type="TextureRect" parent="Level3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 241.0
offset_top = 18.0
offset_right = 1641.0
offset_bottom = 1046.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_81ftp")

[node name="Label" type="Label" parent="Level3/Kronologi"]
layout_mode = 0
offset_left = 782.0
offset_top = 450.0
offset_right = 1124.0
offset_bottom = 513.0
theme_override_colors/font_color = Color(0.290196, 0.282353, 0.266667, 1)
theme_override_fonts/font = ExtResource("3_2w5t3")
theme_override_font_sizes/font_size = 50
text = "KRONOLOGI"

[node name="Label2" type="Label" parent="Level3/Kronologi"]
layout_mode = 0
offset_left = 731.0
offset_top = 527.0
offset_right = 1184.0
offset_bottom = 729.0
theme_override_colors/font_color = Color(0.290196, 0.282353, 0.266667, 1)
theme_override_fonts/font = ExtResource("6_kiygy")
text = "Mulai 10 November 1945 hingga dua pekan selanjutnya, 28 November 1945 terjadi pertempuran Surabaya. Pertempuran ini setidaknya memakan korban sebanyak 20.000 orang dari Surabaya dan 1.500 dari Sekutu. Selain itu diperkirakan sebanyak 150.000 orang meninggalkan Surabaya.

Pertempuran 10 November 1945 merupakan pertempuran terbesar dalam sejarah mempertahankan kemerdekaan Indonesia. Mengingat semangat militan pemuda Surabaya untuk mempertahankan kemerdekaan RI, Presiden Soekarno menetapkan 10 November 1945 sebagai Hari Pahlawan."
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="Button" type="Button" parent="Level3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 1020.0
offset_top = 880.0
offset_right = 1282.0
offset_bottom = 914.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_au62c")
theme_override_styles/hover = SubResource("StyleBoxTexture_8strt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hepub")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -65.0
offset_right = 87.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40

[node name="select" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_bk4ee")
text = "1"

[node name="select2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_bk4ee")
text = "2"

[node name="select3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_bk4ee")
text = "3"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 387.0
offset_top = 71.0
offset_right = 587.0
offset_bottom = 121.0
text = "KEMBALI"

[connection signal="mouse_entered" from="Level1/Button" to="." method="_entered_button_level_1"]
[connection signal="pressed" from="Level1/Button" to="." method="_hover_button_level_1"]
[connection signal="mouse_entered" from="Level2/Button" to="." method="_entered_button_level_2"]
[connection signal="pressed" from="Level2/Button" to="." method="_hover_button_level_2"]
[connection signal="mouse_entered" from="Level3/Button" to="." method="_entered_button_level_3"]
[connection signal="pressed" from="Level3/Button" to="." method="_hover_button_level_3"]
[connection signal="mouse_entered" from="HBoxContainer/select" to="." method="_hover_select_1"]
[connection signal="pressed" from="HBoxContainer/select" to="." method="_on_select_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/select2" to="." method="_hover_select_2"]
[connection signal="pressed" from="HBoxContainer/select2" to="." method="_on_select_2_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/select3" to="." method="_hover_select_3"]
[connection signal="pressed" from="HBoxContainer/select3" to="." method="_on_select_3_pressed"]
[connection signal="mouse_entered" from="BackButton" to="." method="_hover_back_entered"]
[connection signal="pressed" from="BackButton" to="." method="on_back_button_pressed"]
